# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./products";
 export * from "./discounts";
 export * from "./orders";
 export * from "./customers";
+export * from "./wholesale_customers";
